src/objects/ProjectMain__c.object
<CustomObject>
    <fields>
        <fullName>AssignUser__c</fullName>
        <label>担当者</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CalendarFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>カレンダー非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateMode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>日付切替モード設定</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Describe__c</fullName>
        <label>説明</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDt__c</fullName>
        <label>終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsPublicFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>公開フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagerUser__c</fullName>
        <label>マネージャー</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PlanBaseName__c</fullName>
        <label>基準名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRecord__c</fullName>
        <label>プロジェクトコード</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleDetailFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>タスク別権限制限</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDt__c</fullName>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>finish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>アーカイブ</label>
        <type>Checkbox</type>
    </fields>
    <label>プロジェクト</label>
    <nameField>
        <label>プロジェクト名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>